# aoc2022

./: .gitignore  CMakeLists.txt  create_day_folder.sh  helper.cmake
day_1/: main.cpp
day_10/: Processor.cpp  Processor.h  main.cpp
day_11/: Monkey.cpp  Monkey.h  main.cpp
day_2/: main.cpp
day_3/: main.cpp
day_4/: input_example.txt  main.cpp
day_5/: CargoPort.cpp  CargoPort.h  main.cpp
day_6/: main.cpp
day_7/: Folder.cpp  Folder.h  main.cpp
day_8/: HeightMap.cpp  HeightMap.h  main.cpp
day_9/: Knot.cpp  Knot.h  RopePhysics.cpp  RopePhysics.h  main.cpp
day_template/: CMakeLists.txt  main.cpp
include/: helpers.h
